--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,23 @@
 sudo: required
+language: generic
+
 services:
   - docker
 
 before_install:
-  - docker build -t radim/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t baratko/react-test -f ./client/Dockerfile.dev ./client
+
 script:
-  - docker run -e CI=true radim/react-test npm test
-
-
+  - docker run -e CI=true baratko/react-test npm test
 
 after_success:
   - docker build -t baratko/multi-client ./client
   - docker build -t baratko/multi-nginx ./nginx
   - docker build -t baratko/multi-server ./server
   - docker build -t baratko/multi-worker ./worker
-# Log in to Docker CLI
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-# take those images and push to Docker hub
+  # Take those images and push them to docker hub
   - docker push baratko/multi-client
   - docker push baratko/multi-nginx
   - docker push baratko/multi-server
@@ -30,8 +31,6 @@ deploy:
   bucket_name: 'elasticbeanstalk-us-east-1-039995468444'
   bucket_path: 'docker-multi'
   on:
-   branch: master
+    branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
-
-
