--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
-version: '3.3'
+version: "3"
 services:
   client:
-    image: "baratko/multi-client"
-    # mem_limit: 128
+    image: "cygnetops/multi-client-10-14"
+    mem_limit: 128m
     hostname: client
   server:
-    image: "baratko/multi-server"
-    # mem_limit: 128
+    image: "cygnetops/multi-server-10-14"
+    mem_limit: 128m
     hostname: api
     environment:
       - REDIS_HOST=$REDIS_HOST
@@ -17,16 +17,15 @@ services:
       - PGPASSWORD=$PGPASSWORD
       - PGPORT=$PGPORT
   worker:
-    image: "baratko/multi-worker"
-    # mem_limit: 128
+    image: "cygnetops/multi-worker-10-14"
+    mem_limit: 128m
     hostname: worker
     environment:
       - REDIS_HOST=$REDIS_HOST
       - REDIS_PORT=$REDIS_PORT
   nginx:
-    image: "baratko/multi-nginx"
-    # mem_limit: 128
+    image: "cygnetops/multi-nginx-10-14"
+    mem_limit: 128m
     hostname: nginx
     ports:
-    - "80:80"
-  
+      - "80:80"
