--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     #mem_limit: 128m
     hostname: client
   server:
-    image: "cygnetops/multi-server-10-14"baratko/multi-server"
+    image: "baratko/multi-server"
     #mem_limit: 128m
     hostname: api
     environment:
